--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estrellitas de Palabras</title>
+    <title>Estrellitas de Palabras - Pizarra Mágica</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&family=Fredoka+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&family=Fredoka+One&family=Patrick+Hand&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>✨ Estrellitas de Palabras ✨</h1>
+            <h1>✏️ Pizarra de Palabras 칠판</h1>
         </header>
 
         <main>
@@ -23,9 +23,9 @@
                     </div>
             </section>
 
-            <section id="input-section">
-                <input type="text" id="letter-input" maxlength="1" placeholder="Ingresa una letra" autofocus>
-                <button id="guess-button">¡Adivinar!</button>
+            <section id="alphabet-section">
+                <div id="alphabet-keyboard-container">
+                    </div>
             </section>
 
             <section id="guessed-letters-section">
@@ -39,7 +39,7 @@
         </main>
 
         <footer>
-            <p>¡Diviértete aprendiendo!</p>
+            <p>¡Adivina la palabra!</p>
         </footer>
     </div>
 
