feat: Add external dictionary, difficulty levels, and clue system
This major update enhances the "Pizarra de Palabras" game by:
1.  Externalizing the word list into `dictionary.js`, where each word
    includes a definition and a difficulty level (easy, medium, hard).
2.  Implementing a difficulty selection feature, allowing players to
    choose the challenge level before starting a new game. The game
    filters words based on the selected difficulty.
3.  Introducing a "Pedir Pista" (Ask for Clue) feature, which reveals
    the current word's definition to help the player. This can be used
    once per game.

Detailed changes:
-   **New File (`dictionary.js`):**
    -   Created to store an array of word objects, each containing
        `word`, `definition`, and `difficulty`.
-   **HTML (`index.html`):**
    -   Added `<script src="dictionary.js"></script>` before `script.js`.
    -   Included UI elements for difficulty selection (buttons).
    -   Added a "Pedir Pista" button.
    -   Added a dedicated area to display the clue text.
-   **CSS (`style.css`):**
    -   Styled the new difficulty selection buttons, including an `active`
      state for the chosen difficulty.
    -   Styled the "Pedir Pista" button.
    -   Styled the clue display area to fit the blackboard theme.
-   **JavaScript (`script.js`):**
    -   Loads and uses `DICTIONARY_DATA` from `dictionary.js`.
    -   Manages `currentDifficulty` state.
    -   `getRandomWord()` now filters words by difficulty and selects a
      word object (word, definition, difficulty).
    -   `handleDifficultyChange()` updates difficulty and restarts the game.
    -   `handleClueRequest()` displays the definition from the current
      word object and manages clue usage.
    -   `startGame()` initializes/resets difficulty and clue states, and
      handles cases where no words are available for a selected difficulty.
    -   Added `normalizeString()` utility to handle potential accents in
      words from the dictio

--- a/index.html
+++ b/index.html
@@ -13,10 +13,25 @@
             <h1>✏️ Pizarra de Palabras 칠판</h1>
         </header>
 
-        <main>
-            <section id="game-status">
+        <section id="game-setup">
+            <div id="difficulty-selection-container">
+                <p>Elige la dificultad:</p>
+                <button class="difficulty-button active" data-difficulty="easy">Fácil</button>
+                <button class="difficulty-button" data-difficulty="medium">Medio</button>
+                <button class="difficulty-button" data-difficulty="hard">Difícil</button>
+            </div>
+        </section>
+
+        <main id="game-area"> <section id="game-status">
                 <p id="stars-display-container">Estrellitas: <span id="stars-display"></span></p>
-                <p id="message-area" class="message">&nbsp;</p> </section>
+                <button id="clue-button" style="display: none;">💡 Pedir Pista</button>
+            </section>
+
+            <div id="clue-display-area" style="display: none;">
+                <p><strong>Pista:</strong> <span id="clue-text">Tu pista aparecerá aquí.</span></p>
+            </div>
+
+            <p id="message-area" class="message">&nbsp;</p>
 
             <section id="word-display-section">
                 <div id="word-display-container">
@@ -43,6 +58,5 @@
         </footer>
     </div>
 
-    <script src="script.js"></script>
-</body>
+    <script src="dictionary.js"></script> <script src="script.js"></script>   </body>
 </html>
