--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estrellitas de Palabras - Pizarra Mágica</title>
+    <title>Pizarra de Palabras - ¡Multijugador!</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&family=Fredoka+One&family=Patrick+Hand&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -13,50 +15,119 @@
             <h1>✏️ Pizarra de Palabras 칠판</h1>
         </header>
 
-        <section id="game-setup">
+        <section id="game-mode-selection-section" class="game-setup-section">
+            <p>Selecciona el modo de juego:</p>
+            <div class="tabs">
+                <button class="tab-button active" data-mode="local">🧑‍🏫 Jugar Local</button>
+                <button class="tab-button" data-mode="network">🌐 Jugar en Red</button>
+            </div>
+        </section>
+
+        <section id="local-game-setup-section" class="game-setup-section">
+            <h2>Configuración Juego Local</h2>
             <div id="difficulty-selection-container">
                 <p>Elige la dificultad:</p>
                 <button class="difficulty-button active" data-difficulty="easy">Fácil</button>
                 <button class="difficulty-button" data-difficulty="medium">Medio</button>
                 <button class="difficulty-button" data-difficulty="hard">Difícil</button>
             </div>
+            <button id="start-local-game-button" class="action-button">¡Empezar Juego Local!</button>
         </section>
 
-        <main id="game-area"> <section id="game-status">
+        <section id="network-game-setup-section" class="game-setup-section" style="display: none;">
+            <h2>Configuración Juego en Red</h2>
+            <div id="player-identity-setup">
+                <label for="network-player-name">Tu Nombre:</label>
+                <input type="text" id="network-player-name" placeholder="Ingresa tu nombre" maxlength="15">
+                <label for="network-player-icon">Tu Ícono:</label>
+                <select id="network-player-icon">
+                    </select>
+            </div>
+            <div>
+                <label for="network-max-players">Máx. Jugadores en Sala (2-4):</label>
+                <select id="network-max-players">
+                    <option value="2">2 Jugadores</option>
+                    <option value="3">3 Jugadores</option>
+                    <option value="4" selected>4 Jugadores</option>
+                </select>
+            </div>
+            <div class="network-actions">
+                <button id="host-game-button" class="action-button">🏰 Hostear Sala</button>
+                <button id="join-random-button" class="action-button">🎲 Unirse al Azar</button>
+                </div>
+        </section>
+
+        <section id="network-info-area" style="display: none;">
+            <h3 id="network-info-title">Información de la Sala</h3>
+            <div id="qr-code-container"></div>
+            <p id="network-info-text"></p>
+            <button id="copy-room-link-button" class="action-button-secondary">Copiar Enlace</button>
+            <button id="cancel-matchmaking-button" class="action-button-danger" style="display:none;">Cancelar Búsqueda</button>
+        </section>
+
+        <section id="lobby-area" style="display: none;">
+            <h2 id="lobby-title">Sala de Espera</h2>
+            <p id="lobby-room-id-display">ID de Sala: <span>Cargando...</span></p>
+            <p id="lobby-game-settings-display">Dificultad: <span id="lobby-difficulty-display"></span> | Jugadores: <span id="lobby-player-count-display"></span></p>
+            <div id="lobby-player-list">
+                </div>
+            <p id="lobby-message-area" class="message">&nbsp;</p>
+            <div class="lobby-actions">
+                <button id="lobby-toggle-ready-button" class="action-button">👍 Marcar como Listo</button>
+                <button id="lobby-start-game-leader-button" class="action-button-confirm" style="display: none;">🚀 ¡Iniciar Juego!</button>
+            </div>
+            <button id="lobby-leave-room-button" class="action-button-danger">🚪 Salir de la Sala</button>
+        </section>
+
+        <main id="game-area" style="display: none;"> <section id="game-status">
                 <p id="stars-display-container">Estrellitas: <span id="stars-display"></span></p>
-                <button id="clue-button" style="display: none;">💡 Pedir Pista</button>
+                <p id="current-player-turn-display">Turno de: <span></span></p> <button id="clue-button" style="display: none;">💡 Pedir Pista</button>
             </section>
 
             <div id="clue-display-area" style="display: none;">
-                <p><strong>Pista:</strong> <span id="clue-text">Tu pista aparecerá aquí.</span></p>
+                <p><strong>Pista:</strong> <span id="clue-text"></span></p>
             </div>
 
             <p id="message-area" class="message">&nbsp;</p>
 
             <section id="word-display-section">
-                <div id="word-display-container">
-                    </div>
+                <div id="word-display-container"></div>
             </section>
 
             <section id="alphabet-section">
-                <div id="alphabet-keyboard-container">
-                    </div>
+                <div id="alphabet-keyboard-container"></div>
             </section>
 
             <section id="guessed-letters-section">
+                <div id="score-display-area">
+                    </div>
                 <p>Letras incorrectas: <span id="incorrect-letters-display" class="letters incorrect"></span></p>
                 <p>Letras correctas: <span id="correct-letters-display" class="letters correct"></span></p>
             </section>
 
             <section id="controls-section">
                 <button id="play-again-button" style="display:none;">Jugar Otra Vez</button>
-            </section>
+                 <button id="main-menu-button" style="display:none;">Volver al Menú</button> </section>
         </main>
 
         <footer>
-            <p>¡Adivina la palabra!</p>
+            <p>¡Pizarra de Palabras!</p>
         </footer>
     </div>
 
-    <script src="dictionary.js"></script> <script src="script.js"></script>   </body>
+    <div id="custom-modal" class="modal" style="display:none;">
+        <div class="modal-content">
+            <p id="modal-message-text"></p>
+            <div id="modal-dynamic-buttons" class="modal-buttons-container">
+                </div>
+            <button id="modal-close-button" class="action-button-secondary">Cerrar</button>
+        </div>
+    </div>
+
+    <script src="dictionary.js"></script>
+    <script type="module" src="pizarraState.js"></script>
+    <script src="peerjs-multiplayer.js"></script>
+    <script type="module" src="gameLogic.js"></script>
+    <script type="module" src="main.js"></script>
+    </body>
 </html>
