feat: Add confetti on win and haptic feedback
Implements two new features to enhance player experience:
1.  **Winning Confetti Celebration:**
    -   Added an HTML container (`#confetti-container`) for confetti.
    -   Styled the container and individual confetti pieces (`.confetti-piece`)
        in `style.css`, including a falling and spinning animation
        with a CSS variable (`--drift`) for horizontal sway.
    -   In `main.js`:
        -   Added `createConfettiPiece`, `startConfetti`, and `stopConfetti`
            functions.
        -   `startConfetti()` is called upon winning a local game (`endGameUI`)
            and is integrated into the network win callback
            (`window.pizarraUiUpdateCallbacks.showNetworkGameOver`).
        -   `stopConfetti()` is called when starting a new game or
            returning to the main menu to clear previous celebrations.

2.  **Haptic Feedback:**
    -   Added a `triggerVibration` function to `main.js`.
    -   Short haptic feedback is now triggered when a player selects a
        letter in `handleLetterClickUI`.
    -   A more distinct haptic pattern is triggered upon winning a game,
        both locally (`endGameUI`) and in network games (via
        `window.pizarraUiUpdateCallbacks.showNetworkGameOver`).

These additions provide more engaging and celebratory feedback to the player.

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                  <button id="main-menu-button" style="display:none;">Volver al Menú</button> </section>
         </main>
 
-        <footer>
+        <div id="confetti-container"></div> <footer>
             <p>¡Pizarra de Palabras!</p>
         </footer>
     </div>
@@ -126,8 +126,11 @@
 
     <script src="dictionary.js"></script>
     <script type="module" src="pizarraState.js"></script>
-    <script src="peerjs-multiplayer.js"></script>
-    <script type="module" src="gameLogic.js"></script>
+    <script src="peerjs-multiplayer.js"></script> <script type="module" src="gameLogic.js"></script>
+    
+    <script type="module" src="pizarraPeerConnection.js"></script>
+    <script type="module" src="pizarraMatchmaking.js"></script>
+
     <script type="module" src="main.js"></script>
-    </body>
+</body>
 </html>
