--- a/index.html
+++ b/index.html
@@ -123,14 +123,15 @@
             <button id="modal-close-button" class="action-button-secondary">Cerrar</button>
         </div>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="peerjs-multiplayer.js"></script>
     <script src="dictionary.js"></script>
     <script type="module" src="pizarraState.js"></script>
-    <script src="peerjs-multiplayer.js"></script> <script type="module" src="gameLogic.js"></script>
-    
+    <script type="module" src="gameLogic.js"></script>
     <script type="module" src="pizarraPeerConnection.js"></script>
     <script type="module" src="pizarraMatchmaking.js"></script>
-
     <script type="module" src="main.js"></script>
+</body>
+</html>    
 </body>
 </html>
