--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
     <script type="module" src="pizarraPeerConnection.js"></script>
     <script type="module" src="pizarraMatchmaking.js"></script>
     <script type="module" src="main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js"></script>
 </body>
 </html>    
 </body>
