fix(netplay): align Palabras peer-handling & state-sync with Cajitas model
* Modified stopAnyActiveGameOrNetworkSession in main.js to prevent premature destruction of the host PeerJS object while a room is being created or waiting for players in the lobby.
* Updated PeerJS initialization in pizarraPeerConnection.js (via ensurePeerInitialized) to use explicit, secure WebSocket (wss://) options for the PeerServer (palabras.martinez.fyi), mirroring stable configurations.
* Changed the peer.on('disconnected') event handler in peerjs-multiplayer.js to attempt peer.reconnect() for transient WebSocket drops, rather than immediately closing the session, to maintain data-channel persistence.
* Introduced a new state synchronization mechanism ('state_sync'):
    - Added getRawNetworkRoomData() to pizarraState.js for the host to access its complete network state.
    - Created pizarraNetHandlers.js with:
        - attach(conn): Listens for 'state_sync' messages on client connections to update their local state.
        - broadcastState(connections): Allows the host to send its full network state to all clients.
    - Integrated these handlers into pizarraPeerConnection.js:
        - Host now calls pizarraNetHandlers.broadcastState() after critical game state changes (e.g., after a player's guess is processed, when a new player joins, or a player leaves).
        - Client connections now use pizarraNetHandlers.attach() to process incoming 'state_sync' messages.
    - Added syncGameUIFromNetworkState callback in main.js, triggered on 'state_sync', to ensure client UIs (board, turns, scores, etc.) accurately reflect the synchronized state.
* Ensured that client-side UI updates for game events (like guess results, clue reveals) correctly use the state that has been updated either by direct messages or by the full state_sync.

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                 <input type="text" id="network-player-name" placeholder="Escribe tu nombre aquí" maxlength="15" value="Danielle">
                 <label for="network-player-icon">🎭 Tu Ícono Favorito:</label>
                 <select id="network-player-icon">
-                    <!-- Will be populated by JavaScript -->
-                </select>
+                    </select>
             </div>
             <div>
                 <label for="network-max-players">👥 ¿Cuántos amigos pueden jugar? (2-4):</label>
@@ -71,8 +70,7 @@
             <p id="lobby-room-id-display">🆔 ID de Sala: <span>Cargando...</span></p>
             <p id="lobby-game-settings-display">⚙️ Dificultad: <span id="lobby-difficulty-display"></span> | 👥 Jugadores: <span id="lobby-player-count-display"></span></p>
             <div id="lobby-player-list">
-                <!-- Players will be populated here -->
-            </div>
+                </div>
             <p id="lobby-message-area" class="message">&nbsp;</p>
             <div class="lobby-actions">
                 <button id="lobby-toggle-ready-button" class="action-button">👍 ¡Estoy Lista!</button>
@@ -104,8 +102,7 @@
 
             <section id="guessed-letters-section">
                 <div id="score-display-area">
-                    <!-- Score cards will be populated here -->
-                </div>
+                    </div>
                 <p>❌ Letras incorrectas: <span id="incorrect-letters-display" class="letters incorrect">Ninguna</span></p>
                 <p>✅ Letras correctas: <span id="correct-letters-display" class="letters correct">Ninguna</span></p>
             </section>
@@ -127,20 +124,18 @@
         <div class="modal-content">
             <p id="modal-message-text"></p>
             <div id="modal-dynamic-buttons" class="modal-buttons-container">
-                <!-- Dynamic buttons will be added here -->
-            </div>
+                </div>
             <button id="modal-close-button" class="action-button-secondary">❌ Cerrar</button>
         </div>
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="peerjs-multiplayer.js"></script>
-    <script src="dictionary.js"></script>
+    <script src="peerjs-multiplayer.js"></script> <script src="dictionary.js"></script>
     <script type="module" src="pizarraState.js"></script>
     <script type="module" src="gameLogic.js"></script>
     <script type="module" src="pizarraPeerConnection.js"></script>
     <script type="module" src="pizarraMatchmaking.js"></script>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="pizarraNetHandlers.js"></script> <script type="module" src="main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js"></script>
-</body>
+    </body>
 </html>
