--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
 
     <div id="custom-modal" class="modal" style="display:none;">
         <div class="modal-content">
-            <p id="modal-message-text"></p>
-            <div id="modal-dynamic-buttons" class="modal-buttons-container"></div>
+            <div id="modal-main-content-area"></div> <div id="modal-dynamic-buttons" class="modal-buttons-container"></div>
             <button id="modal-close-button" class="action-button-secondary">❌ Cerrar</button>
         </div>
     </div>
