feat: Improve Ñ handling, mobile UI, and localize to Argentinian Spanish
This commit addresses several key areas:

1.  **Bug Fix (Ñ Character):**
    * Corrected the normalization logic in `pizarraState.js` for words containing "Ñ". This ensures accurate word length display (e.g., "ARAÑA" is 5 letters) and proper recognition of "Ñ" during gameplay, distinguishing it from "N".

2.  **Mobile UI Enhancements:**
    * Refined `style.css` for a better mobile experience:
        * The in-game statistics bar is now more compact.
        * The word display area (letter boxes) is larger and more prominent.
        * The on-screen keyboard has been resized and its layout optimized for improved touch usability and better use of screen space on mobile devices.
    * Modified `pizarraUi.js` to remove the "¡Haz clic en una letra!" instructional message that appeared after other messages timed out during active gameplay, freeing up valuable screen space.

3.  **Localization (Argentinian Spanish):**
    * Updated user-facing text throughout `index.html`, `pizarraUi.js`, `main.js`, and `pizarraPeerConnection.js` to use the "vos" form and other expressions common in Argentinian Spanish, providing a more tailored experience for users from that region.

These changes aim to improve core gameplay accuracy, enhance the user interface on mobile devices, and make the game feel more natural for Argentinian Spanish speakers.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width,initial-scale=1,maximum-scale=1,interactive-widget=resizes-content">
-    <title>Palabras de Danielle - ¡Juego de Palabras Mágico!</title>
+    <title>Palabras de Danielle</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&family=Bubblegum+Sans&family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
@@ -17,7 +17,7 @@
 
     <div id="setup-container">
         <section id="game-mode-selection-section" class="game-setup-section">
-            <p>¿Cómo quieres jugar hoy? 🎮</p>
+            <p>¿Cómo querés jugar hoy? 🎮</p>
             <div class="tabs">
                 <button class="tab-button active" data-mode="local">🏠 Jugar Solita</button>
                 <button class="tab-button" data-mode="network">👥 Jugar con Amigos</button>
@@ -27,7 +27,7 @@
         <section id="local-game-setup-section" class="game-setup-section">
             <h2>¡Vamos a Jugar! 🌟</h2>
             <div id="difficulty-selection-container">
-                <p>Elige qué tan difícil quieres que sea: 💪</p>
+                <p>Elegí qué tan difícil querés que sea: 💪</p>
                 <button class="difficulty-button active" data-difficulty="easy">🌻 Fácil</button>
                 <button class="difficulty-button" data-difficulty="medium">🌸 Medio</button>
                 <button class="difficulty-button" data-difficulty="hard">🌺 Difícil</button>
@@ -39,7 +39,7 @@
             <h2>¡Jugar con Amigos! 👭</h2>
             <div id="player-identity-setup">
                 <label for="network-player-name">🏷️ Tu Nombre:</label>
-                <input type="text" id="network-player-name" placeholder="Escribe tu nombre aquí" maxlength="15" value="Danielle">
+                <input type="text" id="network-player-name" placeholder="Escribí tu nombre aquí" maxlength="15" value="Danielle">
                 <label for="network-player-icon">🎭 Tu Ícono Favorito:</label>
                 <select id="network-player-icon"></select>
             </div>
