--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width,initial-scale=1,maximum-scale=1,interactive-widget=resizes-content">
+          content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <title>Palabras de Danielle</title>
-    <link rel="stylesheet" href="style.css">
+
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#FF69B4"> <link rel="apple-touch-icon" href="icons/icon-192x192.png"> <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&family=Bubblegum+Sans&family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js"></script>
@@ -77,8 +81,11 @@
             </div>
             <button id="lobby-leave-room-button" class="action-button-danger">🚪 Salir de la Sala</button>
         </section>
-    </div> <main id="app" style="display: none;">
-        <section id="stats-bar"> <p id="stars-display-container">✨ Estrellitas: <span id="stars-display"></span></p>
+    </div>
+
+    <main id="app" style="display: none;">
+        <section id="stats-bar">
+            <p id="stars-display-container">✨ Estrellitas: <span id="stars-display"></span></p>
             <p id="current-player-turn-display">🎯 Turno de: <span></span></p>
             <button id="clue-button" style="display: none;">💡 Pedir Pista Mágica</button>
         </section>
@@ -88,10 +95,12 @@
         </div>
         <p id="message-area" class="message">&nbsp;</p>
 
-        <section id="word-display-section"> <div id="word-display-container"></div>
+        <section id="word-display-section">
+            <div id="word-display-container"></div>
         </section>
 
-        <section id="alphabet-section"> <div id="alphabet-keyboard-container"></div>
+        <section id="alphabet-section">
+            <div id="alphabet-keyboard-container"></div>
         </section>
 
         <section id="guessed-letters-section">
@@ -107,7 +116,7 @@
     </main>
 
     <div id="confetti-container"></div>
-    
+
     <footer id="banner">
         <p>💖 ¡Palabras de Danielle! 💖</p>
     </footer>
@@ -119,15 +128,31 @@
             <button id="modal-close-button" class="action-button-secondary">❌ Cerrar</button>
         </div>
     </div>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="peerjs-multiplayer.js"></script>
     <script src="dictionary.js"></script>
     <script type="module" src="pizarraState.js"></script>
     <script type="module" src="gameLogic.js"></script>
-    <script type="module" src="pizarraUi.js"></script> <script type="module" src="pizarraSound.js"></script> <script type="module" src="pizarraPeerConnection.js"></script>
+    <script type="module" src="pizarraUi.js"></script>
+    <script type="module" src="pizarraSound.js"></script>
+    <script type="module" src="pizarraPeerConnection.js"></script>
     <script type="module" src="pizarraMatchmaking.js"></script>
     <script type="module" src="main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js"></script>
+
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/service-worker.js')
+                    .then(registration => {
+                        console.log('ServiceWorker registration successful with scope: ', registration.scope);
+                    })
+                    .catch(error => {
+                        console.log('ServiceWorker registration failed: ', error);
+                    });
+            });
+        }
+    </script>
 </body>
 </html>
