feat: Add custom HTML splash screen for initial load
Implements a custom splash screen that displays immediately on page load
using `icons/logo.png`. The splash screen fades out once the main
application logic in `main.js` has initialized.

Changes include:
- Added splash screen markup to `index.html`.
- Added CSS rules to `style.css` for splash screen appearance and fade-out animation.
- Added JavaScript to `main.js` to trigger the fade-out and removal of the splash screen.

This provides a branded loading experience while initial assets and scripts are processed.

--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js"></script>
 </head>
 <body>
-    <header id="site-header">
-        <h1>🌈 Palabras de Danielle 🦄</h1>
-    </header>
+  <div id="splash-screen">
+    <img src="icons/logo.png" alt="Palabras de Danielle logo" />
+  </div>
 
-    <div id="setup-container">
+  <header id="site-header">
+        <h1>🌈 Palabras de Danielle 🦄</h1>
+  </header>
+
+  <div id="setup-container">
         <section id="game-mode-selection-section" class="game-setup-section">
             <p>¿Cómo querés jugar hoy? 🎮</p>
             <div class="tabs">
